# MotoriZen

./: .gitignore  README.md  fake_data.json  pyproject.toml  run-docker.sh
Texts/: models_descriptions.json
docker/: api.dockerfile  compose.yaml  postgres.dockerfile
docker/init_sql/: 01_tb_user.sql  02_tb_brand.sql  02_tb_cars.sql  02_tb_resultado_do_dia.sql  03_tb_cars.sql  03_tb_fuel_type.sql  04_tb_cars.sql  04_tb_day_result.sql  05_tb_register.sql  init.sql
docker/redis_conf/: redis.conf
src/: configs.py  main.py  populate.py
src/Contents/: base_content.py  brand_content.py  car_contents.py  cars_content.py  exception_content.py  fuel_types_content.py  register_content.py  reports_content.py  user_contents.py
src/DB/: __init__.py  connection_handler.py  querys.py  report_querys.py
src/Enums/: __init__.py  aggregation_interval_enum.py  motorizen_error_enum.py  redis_dbs_enum.py  report_enum.py  reports_daily_enum.py  reports_mean_enum.py  reports_monthly_enum.py  reports_total_enum.py  reports_weekly_enum.py  reports_yearly_enum.py
src/ErrorHandler/: __init__.py  error_model.py  motorizen_error.py
src/Middlewares/: __init__.py  process_time_header_middleware.py
src/Repositories/: base_report_repository.py  base_repository.py  brand_repository.py  car_repository.py  fuel_type_repository.py  register_repository.py  reports_daily_repository.py  reports_mean_repository.py  reports_repository.py  reports_total_repository.py  user_repository.py
src/Responses/: __init__.py  base_response.py  conflict.py  created.py  no_content.py  ok.py  unauthorized.py
src/Routers/: __init__.py  (+8 more)
texts/: models_descriptions.json
(+123 files in other folders)
